# prometheus

./: .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  INSTALL_NOTES.md  LICENSE.txt  README.md  dat.tgz  environment.yml  gpu.tgz  index.html  install.sh  mkdocs.yml  objects.inv  optional-requirements.txt  pone_config.json  pyproject.toml  refactor.md  requirements.txt  run_prometheus.py  search.html  setup.py  singularity-ce.yml  smoketest.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: 1-BUG.yml  1-BUG_REPORT.yml  2-ENHANCEMENT_SUGGESTION.yml  3-DOC_REQUEST.yml  4-QUESTION.yml  BUG_REPORT.yml  DOC_REQUEST.yml  ENHANCEMENT_SUGGESTION.yml  QUESTION.yml
PPC/: icemodel.par  ini.cxx  ppc  ppc.cu
PPC_CUDA/: Makefile  combined.ppc  geo-f2k  ic_geo-f2k  plz.ppc  ppc  ppc.cu
PPC_CUDA_defunct/: Makefile  geo-f2k  ini.cxx  plz.ppc  ppc
PPC_tables/ic_accept_all/: geo-f2k  tilt.par
api-reference/hyperion/: index.html
api-reference/olympus/: index.html
api-reference/prometheus/: index.html
citation/: index.html
container/: dockerfile  dockerfile_gpu  dockerfile_user  hebe.def
container/new_kernel/: dockerfile
container/old_kernel/: build_proposal_tables.py  dockerfile
css/: custom_rules.css
dat/All/: README  as.h1-100cm  as.h2-50cm  as.h3-30cm  as.nominal  cfg.new  cfg.txt  eff-f2k  hvs-f2k  icemodel.4pr  icemodel.aha  icemodel.sp1  icemodel.sp2  icemodel.sp2+  icemodel.sp2x  icemodel.sp2y  rnd.txt  tilt.par  wv.400  wv.rde
dat/aha/: cfg.txt
dat/aha-fixed/: geo-f2k
dat/lea/: cfg.txt  tilt.par
dat/mie/: cfg.txt
dat/spx/: icemodel.par  tilt.par
docs/: citation.md  index.md  installation.md  prometheus.html
docs/css/: custom_rules.css
docs/documentation/: citation.md  getting_started.md  installation.md  usage.md
docs/js/: extra.js
examples/: 01_basic_water.py  02_basic_ice.py  combined.ppc  constants.py  detector_construction.ipynb  detector_construction_GVD.ipynb  detector_example.ipynb  earth_model_comparison.ipynb  effective_area_example.py  example_batches.py  example_detector_construction.py  example_dist_sampling.ipynb  example_effective_area.ipynb  example_meta_data_reader.ipynb  example_olympus.py  example_plotting_olympus.ipynb  example_ppc.py  fasrc_example_ppc.py  genie_tester.ipynb  gtrac_1_nue.root  injection.ipynb  output_example.ipynb  plotting.py  ppc_tables.ipynb  run_olympus.sh  run_ppc.sh  timing_water_plot.ipynb  timingtest.npy  water_timing.py
hebe/: __init__.py  __main__.py  config.py  detector.py  detector_dictionaries.py  detector_handler.py  f2k_utils.py  hebe.py  hebe_ui.py  lepton_injector.py  lepton_prop.py  particle.py  photonpropagator.py  ppc_plotting.py  prometheus_plotting.py  weighter.py
hyperion/: constants.py  data.py  medium.py  propagate.py  utils.py
installation/: index.html
olympus/: utils.py
paper_plots/: paper.mplstyle
prometheus/: __init__.py  __main__.py  config.py  index.html  plotting.py  prometheus.py  prometheus_plotting.py  weighter.py
resources/: photon_arrival_time_counts_params.pickle  photon_arrival_time_nflow_params.pickle
resources/LeptonInjector/: .gitignore  CMakeLists.txt  README.md  RELEASE_NOTES
resources/LeptonInjector/private/LeptonInjector/: BasicInjectionConfiguration.cxx  Controller.cxx  Coordinates.cxx  DataWriter.cxx  EventProps.cxx  LeptonInjector.cxx  Particle.cxx  Random.cxx
resources/LeptonInjector/private/earthmodel-service/: EarthModelCalculator.cxx  EarthModelService.cxx
resources/LeptonInjector/private/phys-services/: LICrossSection.cxx
resources/LeptonInjector/private/pybindings/: LeptonInjector.cxx  array_indexing_suite.h  array_ref.h  container_conversions.h  earthmodel-service.cxx
resources/LeptonInjector/private/test/: MultiInjection.cxx  RangedInjection.cxx  Utils.cxx  VolumeInjection.cxx  tools.cxx  tools.h
resources/LeptonInjector/public/LeptonInjector/: BasicInjectionConfiguration.h  Constants.h  Controller.h  Coordinates.h  DataWriter.h  EventProps.h  LeptonInjector.h  Particle.h  Random.h
resources/LeptonInjector/public/earthmodel-service/: EarthModelCalculator.h  EarthModelService.h
resources/LeptonInjector/public/phys-services/: LICrossSection.h
resources/LeptonInjector/resources/: test_xs.fits  test_xs_total.fits
resources/LeptonInjector/resources/examples/: compiling_c_example.md  convert_to_i3.py  inject_muons.cpp  inject_muons.py
resources/fennel/: .editorconfig  .gitignore  .pre-commit-config.yaml  LICENSE.txt  Makefile  README.md  SECURITY.md  mkdocs.yml  pyproject.toml  pytest.ini
resources/fennel/.github/workflows/: deploy-docs.yml  tests.yml
resources/fennel/docs-mkdocs/: README.md  index.md  requirements.txt
resources/fennel/docs-mkdocs/about/: changelog.md  citation.md  license.md
resources/fennel/docs-mkdocs/api/: config.md  em_cascades.md  fennel.md  hadron_cascades.md  particle.md  photons.md  tracks.md
resources/fennel/docs-mkdocs/development/: commit-guide.md  contributing.md  pr-guide.md  testing.md
resources/fennel/docs-mkdocs/getting-started/: installation.md  quickstart.md  upgrade-guide.md
resources/fennel/docs-mkdocs/user-guide/: configuration.md
resources/fennel/fennel/: __init__.py  __main__.py  config.py  definition_generator.py  em_cascades.py  fennel.py  hadron_cascades.py  particle.py  photons.py  results.py  tracks.py  validation.py
resources/fennel/fennel/data/: .gitignore  aachen.pkl  aachen_muon_production.pkl
resources/fennel/scripts/: generate_reference_values.py
resources/fennel/tests/: README.md  __init__.py  conftest.py  reference_values_v1.3.4.json  test_config.py  test_em_cascades.py  test_hadron_cascades.py  test_integration.py  test_photons_jax.py  test_physics_regression.py  test_tracks.py  test_v2_api.py
scripts/: activate.sh  check_install.sh  fixes.sh  install_leptoninjector_legacy.sh  install_ppc.sh  install_proposal.sh  setup_env.sh
search/: search_index.json
tests/: conftest.py  test_gvd.py  test_icecube.py  test_icecube_gen2.py  test_injection.py  test_pone.py
usage/: index.html
(+500 files in other folders)
