[tool.poetry]
name = "prometheus"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
awkward = "^2.6.1"
numpy = "^1.26.4"
pyarrow = "^15.0.0"
tqdm = "^4.66.1"
pyyaml = "^6.0.1"
proposal = "^7.6.2"
jaxlib = "^0.4.24"
jax = "^0.4.24"
fennel-seed = "^1.3.4"
distrax = "^0.1.5"
dm-haiku = "^0.0.11"
h5py = "^3.10.0"

[[tool.poetry.source]]
name = "PyPI"
priority = "primary"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
